test/overlay/env/nut-1/kustomization.yml
# new kustomize
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: nut-1

resources:
  - ../../../base

patches:
  - path: netpol-patch.yml
