test/overlay/env/nut-1/netpol-patch.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nut-2
        - namespaceSelector:
            matchLabels:
              name: nut-3
  egress: []
