test/overlay/env/nut-1/patch.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/instance: nut-2
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/instance: nut-3
